# Chess

./: .gitignore  Chess_board.txt  README.md
Chess/: Background.cpp  Background.h  BishopPiece.cpp  BishopPiece.h  Black.cpp  Black.h  CMakeLists.txt  CheckValidation.cpp  CheckValidation.h  Chess.sln  Chess.vcxproj  Chess.vcxproj.filters  Functions.cpp  Functions.h  GueenPiece.cpp  GueenPiece.h  KingPiece.cpp  KingPiece.h  KnightPiece.cpp  KnightPiece.h  Main.cpp  PawnPiece.cpp  PawnPiece.h  Piece.cpp  Piece.h  QueenPiece.cpp  QueenPiece.h  RookPiece.cpp  RookPiece.h  White.cpp  White.h  chessBoard.txt  instruction.txt  introduction.txt  player.cpp  player.h  rules.txt
Chess/Chess/: Chess.vcxproj  Functions.cpp  Main.cpp
Chess/Headers/: BishopPiece.h  CheckValidation.h  KingPiece.h  KnightPiece.h  QueenPiece.h
Chess/x64/Debug/: Chess.exe.recipe  Chess.ilk  background.obj.enc  bishoppiece.obj.enc  checkvalidation.obj.enc  functions.obj.enc  kingpiece.obj.enc  knightpiece.obj.enc  main.obj.enc  pawnpiece.obj.enc  piece.obj.enc  player.obj.enc  queenpiece.obj.enc  rookpiece.obj.enc  vc143.idb
Chess/x64/Debug/Chess.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Chess.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Source/: Background.cpp  CheckValidation.cpp  KingPiece.cpp  KnightPiece.cpp  PawnPiece.cpp  Piece.cpp  RookPiece.cpp  chessBoard.txt  player.cpp
Source/Headers/: Background.h  BishopPiece.h  CheckValidation.h  Functions.h  KingPiece.h  PawnPiece.h  Piece.h  RookPiece.h  player.h
x64/Debug/: Chess.ilk  (+2 more)
(+7 files in other folders)
